--- a/style.css
+++ b/style.css
@@ -69,6 +69,63 @@ h1 {
   margin: 0 0 5px;
 }
 
+/* Loading animation pure css */
+.center-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.loader-circle-24 {
+  width: 70px;
+  height: 70px;
+  margin-right: 10px;
+  position: relative;
+}
+
+.loader-circle-24:before {
+  border-radius: 50%;
+  border-top: 5px solid #bbb;
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  height: 80%;
+  width: 80%;
+  animation: loader-circle-24_rotation 1s linear infinite;
+}
+
+.loader-circle-24:after {
+  border-radius: 50%;
+  border-bottom: 5px solid #bbb;
+  content: ' ';
+  display: block;
+  height: 100%;
+  width: 100%;
+  animation: loader-circle-24_rotation-reverse 1s linear infinite;
+  position: absolute;
+  top: 0;
+}
+
+@keyframes loader-circle-24_rotation-reverse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+@keyframes loader-circle-24_rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 500px) {
   h1 {
     font-size: 45px;
